--- a/src/app/components/video-items/styles.module.scss
+++ b/src/app/components/video-items/styles.module.scss
@@ -6,6 +6,14 @@
   padding: 0 var(--gap-default);
   width: 100%;
   box-sizing: border-box;
+
+  @media (max-width: 1400px) {
+    margin-top: calc(3vh + 83px);
+  }
+
+  @media (max-width: 700px) {
+    margin-top: calc(1vh + 83px);
+  }
 }
 
 .item {
